Fixed Argument Parsing in CLIController